# stratengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build-script/imgui/: CMakeLists.txt
docs/: material-system.md
editor/: CMakeLists.txt  main.cc
editor/src/stratengine/editor/: application.h
editor/src/stratengine/editor/backend/: imgui_context.h  vulkan_context.cc  vulkan_context.h  vulkan_engine.h
editor/src/stratengine/editor/renderer/: imgui_context.h  vulkan_context.h
editor/src/stratengine/editor/ui/: viewport_manager.h
editor/src/stratengine/editor/ui/ext/: imginspect.h
editor/src/stratengine/editor/window/: main_window.cc  main_window.h
engine/: CMakeLists.txt  main.cc  version
engine/src/stratengine/: game_object.h  macro.h  scene.cc  scene.h  scene_loader.cc  scene_loader.h  stratengine.h  util.cc
engine/src/stratengine/asset/: asset_manager.cc  asset_manager.h
engine/src/stratengine/component/: camera_component.h  component.h  light_component.h  mesh_component.h  transform_component.h
engine/src/stratengine/game/: game_object_impl.h
engine/src/stratengine/material/: effect_template.cc  effect_template.h  layered_material.cc  layered_material.h  material.cc  material.h  shader_effect.cc  shader_effect.h  shader_pass.h
engine/src/stratengine/material/graph/: graph.h  graph_base.cc  graph_base.h
engine/src/stratengine/material/graph/constants/: color.h  constant.h  constant_2vec.h  constant_3vec.h  constant_4vec.h  constant_double.h  graph_constant.h  vertex_color.h
engine/src/stratengine/material/system/: graph_node_editor.h
engine/src/stratengine/material/v1/: material.h
engine/src/stratengine/mesh/: mesh.cc  mesh.h
engine/src/stratengine/platform/: app.h
engine/src/stratengine/utility/: random.h
shader/: stratengine_fragment_shader.sc  stratengine_vertex_shader.sc
